# Deep2BSDE

./: Deep2BSDE_4_1_original.py  Deep2BSDE_4_1_tf2.py  Deep2BSDE_4_3_original.py  Deep2BSDE_4_3_tf2.py  Deep2BSDE_4_3_tf2_modified.py  Deep2BSDE_BS_tf2.py  Deep2BSDE_BS_tf2_v2.py  README.md  deep2BSDE_4_3_original.py  deep2BSDE_4_3_tf2.py  deep2BSDE_4_3_tf2_modified.py  pyproject.toml  run.ipynb  tmp.py
output/: AllenCahn_d20_2021-09-22-14-07-05.csv  BSB_TF2_ADJ_d100_2021-09-22-14-04-36.csv  BSB_TF2_d100_2021-09-22-14-01-04.csv  BS_TF2_ADJ_d10_2021-09-22-13-59-58.csv  BS_TF2_ADJ_d1_2021-09-22-13-59-04.csv
