[tool.poetry]
name = "deep2BSDE"
version = "0.1.0"
description = ""
authors = ["Tsuruta"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.5.0"
jupyterlab = "^3.1.12"
tensorflow-probability = "0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
